# archflow

./: .gitignore  Cargo.toml  README.md
examples/: actix.rs  fs.rs  hyper.rs
src/: archive.rs  archive_common.rs  async_write_wrapper.rs  compress.rs  compression.rs  constants.rs  descriptor.rs  error.rs  lib.rs  tokio.rs  tools.rs  types.rs  uncompress.rs
src/compress/: common.rs  std.rs  tokio.rs
src/compress/std/: archive.rs  async_wrapper.rs  compressor.rs  write_wrapper.rs
src/compress/tokio/: archive.rs  async_wrapper.rs  compressor.rs
src/std/: archive.rs
src/tests/: external_fields.rs
src/tokio/: archive.rs  async_wrapper.rs  compression.rs  descriptor.rs
tests/: archive_no_extend.rs  archive_string.rs  archive_test.rs  archive_tokio_nostream_test.rs  archive_tokio_stream_test.rs  archive_tokio_string.rs  archivezip_std_extend.rs  archivezip_std_nostream_short.rs  archivezip_std_nostream_test.rs  archivezip_std_stream_test.rs  archivezip_std_test.rs  archivezip_std_test_integrity.rs  archivezip_string.rs  archivezip_tokio_test_integrity.rs  file1.txt  short_text_file.txt  test.py  unzip_test.rs  zip_test.rs
tests/common/: mod.rs  std.rs  tokio.rs
