[package]
name = "archflow"
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Create a streamable Zip archive"
categories = ["compression", "asynchronous", "archive"]
keywords = ["io", "async", "non-blocking", "zip", "archive", "tokio"]

[lib]
name = "archflow"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.25", features = ["io-util", "macros", "rt-multi-thread", "fs"]}
crc32fast = "1.3"
chrono = "0.4"
async-compression = {version = "0.3.15", features = ["all-algorithms", "tokio"], optional = true }
flate2 = { version = "1.0.23", default-features = false, features =["rust_backend"], optional = true } 
bzip2 = { version = "0.4.4", optional = true }
xz2 = { version = "0.1.6", optional = true }
zstd = { version = "0.12.3", optional = true }
byteorder = "1.4.3"

[dev-dependencies]
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
hyper = { version = "0.14", default-features = false, features = ["tcp", "http1", "server", "stream"] }

[[example]]
name = "fs"
path = "examples/fs.rs"

[[example]]
name = "hyper"
path = "examples/hyper.rs"

[features]
default = ["tokio", "std"]
std = ["dep:flate2", "dep:zstd", "dep:xz2", "dep:bzip2"]
tokio = ["dep:async-compression"]

